@@ -1,3 +1,9 @@
+2006-08-10  Al Riddoch  <alriddoch@zepler.org>
+
+	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h:
+	  First pass at re-implementing the forest code as a flexible
+	  general case, rather than a quick hack.
+
 2006-08-22  Al Riddoch  <alriddoch@zepler.org>
 
 	* configure.ac: Increment version number.
